--- a/3.4 Birthday Invite Project/index.html
+++ b/3.4 Birthday Invite Project/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>It's My Birthday!</h1>
     <h2>On the 15th September</h2>
-    <img src="file:///Users/joel/Full_StackWeb_Development/3.4%20Birthday%20Invite%20Project/happy-birthday.png" alt = "Happy birthday colourfull text"/>
+    <img src="https://fastly.picsum.photos/id/1/200/300.jpg?hmac=jH5bDkLr6Tgy3oAg5khKCHeunZMHq0ehBZr6vGifPLY" alt = "Happy birthday colourfull text"/>
     <h3>What to bring: </h3>
     <ul>
         <li>Baloons (I love baloons)</li>
